@@ -6732,72 +6732,29 @@ literal|"conf1"
 argument_list|)
 expr_stmt|;
 comment|// remove collection
-name|ModifiableSolrParams
-name|params
+name|CollectionAdminRequest
+operator|.
+name|Delete
+name|delete
 init|=
 operator|new
-name|ModifiableSolrParams
+name|CollectionAdminRequest
+operator|.
+name|Delete
 argument_list|()
 decl_stmt|;
-name|params
+name|delete
 operator|.
-name|set
+name|setCollectionName
 argument_list|(
-literal|"action"
-argument_list|,
-name|CollectionAction
-operator|.
-name|DELETE
-operator|.
-name|toString
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|params
-operator|.
-name|set
-argument_list|(
-literal|"name"
-argument_list|,
 name|collectionName
 argument_list|)
 expr_stmt|;
-name|QueryRequest
-name|request
-init|=
-operator|new
-name|QueryRequest
-argument_list|(
-name|params
-argument_list|)
-decl_stmt|;
-name|request
-operator|.
-name|setPath
-argument_list|(
-literal|"/admin/collections"
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|client
-operator|==
-literal|null
-condition|)
-block|{
-name|client
-operator|=
-name|createCloudClient
-argument_list|(
-literal|null
-argument_list|)
-expr_stmt|;
-block|}
 name|client
 operator|.
 name|request
 argument_list|(
-name|request
+name|delete
 argument_list|)
 expr_stmt|;
 block|}
