@@ -267,6 +267,9 @@ Bug Fixes
 
 * SOLR-6647: Bad error message when missing resource from ZK when parsing Schema (janhoy)
 
+* SOLR-6591: Overseer can use stale cluster state and lose updates for collections
+  with stateFormat > 1. (shalin)
+
 Optimizations
 ----------------------
 
